--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+#moviePic {
+	height:10px;
+	width:20px;
+	opacity:1px;
+	}
+#movieDetails{
+	position:center;
+	top:20px;
+	width:10px;
+	text-align:center;
+	font-size:10px;
+}
